---
source: compiler-core/src/erlang/tests.rs
assertion_line: 335
expression: "\nfn id(x) {\n  x\n}\n\npub fn main() {\n  id(id)\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec id(L) -> L.
id(X) ->
    X.

-spec main() -> fun((P) -> P).
main() ->
    id(fun id/1).

